# path_continuity

./: CMakeLists.txt  README.md  mainwindow.ui
MotionModes/: motion_mode.cpp  tangent_aligned.cpp
example/: bezier_example.pro  customscene.cpp  customscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcurve.cpp  qcurve.h  wheel.cpp
include/MotionModes/: crab.h  motion_mode.h  tangent_aligned.h
simulation_data/: diff_crab_bad.csv  diff_crab_good.csv  steer_bad.csv  steer_good.csv
src/: customscene.cpp  customscene.h  mainwindow.cpp  qcurve.cpp  qcurve.h  wheel.h
src/MotionModes/: crab.cpp
